allow running inside docker